--- a/welcomer.service
+++ b/welcomer.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=discord-template
+Description=welcomer
 After=network-online.target
 Wants=network-online.target
 StartLimitBurst=3
@@ -10,9 +10,9 @@ User=root
 Group=root
 RestartSec=5
 Restart=on-failure
-WorkingDirectory=/opt/discord-template
-ExecStart=/opt/discord-template/discord-template.mjs
-EnvironmentFile=/opt/discord-template/.env
+WorkingDirectory=/opt/welcomer
+ExecStart=/opt/welcomer/welcomer.mjs
+EnvironmentFile=/opt/welcomer/.env
 
 [Install]
 WantedBy=multi-user.target
