--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@
 LOG_LEVEL=info
 DISCORD_CLIENT_ID=your_client_id_here
 DISCORD_TOKEN=your_app_token_here
+WELCOME_CHANNEL_ID=your_welcome_channel_id_here
